# flexget-plugins

./: .pre-commit-config.yaml  LICENSE  pyproject.toml  readme.md  setup.cfg
.github/: renovate.json
.github/workflows/: ci.yaml  codeql-analysis.yaml  codeql.yaml  lint-other.yaml  lint.yaml  release.yaml
flexget_plugins/modify/: magnet_add_dn.py
tests/: test_magnet_add_dn.py
trim21_flexget_plugins/modify/: magnet_add_dn.py
